# time-logging

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.extension.json  tsconfig.json  vite.config.ts
src/: extension.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Reports.tsx  Settings.tsx  Sidebar.tsx  TimeEntries.tsx  Timer.css  Timer.tsx  index.ts
src/context/: AppContext.tsx
src/providers/: TimerStatusBar.ts  WebviewProvider.ts
src/services/: azureDevOps.ts  database.ts  stateService.ts  timerService.ts  types.ts
src/styles/: index.css
src/types/: index.ts
src/webview/: App.tsx
src/webview/components/: Reports.css  Reports.tsx  Settings.css  Settings.tsx  Sidebar.css  TimeEntries.css  TimeEntries.tsx  Timer.css  Timer.tsx
src/webview/context/: AppContext.tsx
src/webview/styles/: App.css
src/webview/types/: index.ts
